--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta https-equiv="Content-Type" content="text/html"; charset=utf-8"/>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" "content="IE=edge">
     <meta name="viewport" content="width=device-width" content="height=device-height">
     <style media="screen">
       img {
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="media.css">
     <script src="main.js"></script>
 </head>
 <body>
