Updated home page to have a more responsive layout

--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 ﻿<!DOCTYPE html>
-<html class="home-bg">
+<html class="cover">
 <head>
     <meta https-equiv="Content-Type" content="text/html"; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" "content="IE=edge">
     <meta name="viewport" content="width=device-width" content="height=device-height">
-    <style media="screen">
-      img {
-        max-width: 100%;
-        max-height: 100%;
-      }
-    </style>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,18 +13,22 @@
     <script src="main.js"></script>
 </head>
 <body>
-  <div id="tabs">
-    <ul>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a class="active" href="index.html">Home</a></li>
-    </ul>
-</div>
 <div class="main-container">
-<h1>Brady Mills</h1>
-<button class="contact-btn">Contact</button>
-<button class="resume-btn">Resume</button>
+  <div id="tabs">
+    <div class="nav-item"><a href="contact.html">Contact</a></div>
+    <div class="nav-item"><a href="resume.html">Resume</a></div>
+    <div class="nav-item"><a href="about.html">About</a></div>
+    <div class="nav-item"><a class="active" href="index.html">Home</a></div>
+  </div>
+  <div class="align-center">
+    <div>
+      <h1>Brady Mills</h1>
+      <div class="controls">
+        <button class="contact-btn">Contact</button>
+        <button class="resume-btn">Resume</button>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
