Fixed contact page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="align-center">
     <div>
       <h1>Brady Mills</h1>
-      <div class="controls">
+      <div class="under-header">
         <button class="contact-btn">Contact</button>
         <button class="resume-btn">Resume</button>
       </div>
