--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="cover">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,24 +18,32 @@
 </head>
 <body>
   <div id="tabs">
-    <ul>
-      <li><a class="active" href="contact.html">Contact</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="index.html">Home</a></li>
-    </ul>
-</div>
+    <div class="nav-item"><a href="contact.html">Contact</a></div>
+    <div class="nav-item"><a href="resume.html">Resume</a></div>
+    <div class="nav-item"><a href="about.html">About</a></div>
+    <div class="nav-item"><a class="active" href="index.html">Home</a></div>
+  </div>
+  <div class="align-center">
+    <div class="header-container">
+      <div class="header">
+        <h1>Brady Mills</h1>
+        <div class="sub-header">
+          <p class="profile-title">Programmer</p>
+          <p>Taylorsville High</p>
+        </div>
+      </div>
+      <div class="under-header">
+        <div id="icons">
+          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-linkedin"></i></a>
+        </div>
+        <button>Contact</button>
+      </div>
+    </div>
+  </div>
 <div id="profile-card">
     <img src="img.jpg" alt="" style="width:100%">
-    <h1>Brady Mills</h1>
-    <p class="profile-title">Programmer</p>
-    <p>Taylorsville High</p>
-  <div id="icons">
-    <a href="#"><i class="fa fa-instagram"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
-  </div>
-    <p><button>Contact</button></p>
 </div>
 </body>
 </html>
