--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="cover">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,13 +18,11 @@
 </head>
 <body>
   <div id="tabs">
-    <ul>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a class="active" href="resume.html">Resume</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="index.html">Home</a></li>
-    </ul>
-</div>
+    <div class="nav-item"><a href="contact.html">Contact</a></div>
+    <div class="nav-item"><a href="resume.html">Resume</a></div>
+    <div class="nav-item"><a href="about.html">About</a></div>
+    <div class="nav-item"><a class="active" href="index.html">Home</a></div>
+  </div>
 <div id="container">
   <div id="job">
     <div id="card">
