--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <div>
       <h1>Brady Mills</h1>
       <div class="under-header">
-        <button class="contact-btn">Contact</button>
-        <button class="resume-btn">Resume</button>
+        <div>
+          <button class="contact-btn">Contact</button>
+          <button class="resume-btn">Resume</button>
+        </div>
       </div>
     </div>
   </div>
