--- a/about.html
+++ b/about.html
@@ -18,13 +18,11 @@
 </head>
 <body>
   <div id="tabs">
-    <ul>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a class="active" href="about.html">About</a></li>
-      <li><a href="index.html">Home</a></li>
-    </ul>
-</div>
+    <div class="nav-item"><a href="contact.html">Contact</a></div>
+    <div class="nav-item"><a href="resume.html">Resume</a></div>
+    <div class="nav-item"><a href="about.html">About</a></div>
+    <div class="nav-item"><a class="active" href="index.html">Home</a></div>
+  </div>
 <div id="profile-card">
     <img src="img.jpg" alt="" style="width:100%">
     <h1>Brady Mills</h1>
