--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="media.css">
-    <script src="main.js"></script>
+    <script src="java.js"></script>
 </head>
 <body>
 <div class="main-container">
   <div id="tabs">
-    <div class="nav-item"><a href="contact.html">Contact</a></div>
-    <div class="nav-item"><a href="resume.html">Resume</a></div>
-    <div class="nav-item"><a href="about.html">About</a></div>
     <div class="nav-item"><a class="active" href="index.html">Home</a></div>
+    <div class="nav-item"><a href="about.html">About</a></div>
+    <div class="nav-item"><a href="resume.html">Resume</a></div>
+    <div class="nav-item"><a href="contact.html">Contact</a></div>
   </div>
   <div class="align-center">
     <div>
@@ -26,7 +26,7 @@
       <div class="under-header">
         <div>
           <button class="contact-btn">Contact</button>
-          <button class="resume-btn">Resume</button>
+          <button class="resume-btn" href="resume.html">Resume</button>
         </div>
       </div>
     </div>
