--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
       }
     </style>
     <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="media.css">
@@ -23,17 +23,19 @@
     <div class="nav-item"><a href="resume.html">Resume</a></div>
     <div class="nav-item"><a href="contact.html">Contact</a></div>
   </div>
-<div id="profile-card">
-    <img src="img.jpg" alt="" style="width:100%">
-    <h1>Brady Mills</h1>
-    <p class="profile-title">Programmer</p>
-    <p>Taylorsville High</p>
+  <div class="align-center">
+
+<div>
+  <img src="img.jpg" alt="">
+  <h1>Brady Mills</h1>
+  <p class="profile-title">Programmer</p>
+  <p>Taylorsville High</p>
   <div id="icons">
     <a href="#"><i class="fa fa-instagram"></i></a>
     <a href="#"><i class="fa fa-twitter"></i></a>
     <a href="#"><i class="fa fa-linkedin"></i></a>
   </div>
-    <p><button>Contact</button></p>
+  <button>Contact</button>
 </div>
 <div id="card">
   <h1><b><u>Hobbies</u></b><h1>
@@ -43,6 +45,7 @@
       <li>Programming</li>
       <li></li>
     </ul>
+  </div>
 </div>
 </body>
 </html>
