--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="under-header">
-        <div id="icons">
+        <div id="icons align-center">
           <a href="#"><i class="fa fa-instagram"></i></a>
           <a href="#"><i class="fa fa-twitter"></i></a>
           <a href="#"><i class="fa fa-linkedin"></i></a>
@@ -42,8 +42,5 @@
       </div>
     </div>
   </div>
-<div id="profile-card">
-    <img src="img.jpg" alt="" style="width:100%">
-</div>
 </body>
 </html>
