--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <div class="nav-item"><a href="contact.html">Contact</a></div>
   </div>
   <div class="align-center">
-    <div>
+    <div class="header">
       <h1>Brady Mills</h1>
       <div class="under-header">
-        <div>
-          <button class="contact-btn">Contact</button>
-          <button class="resume-btn">Resume</button>
+        <div class="col2">
+          <button>Contact</button>
+          <button>Resume</button>
         </div>
       </div>
     </div>
