--- a/resume.html
+++ b/resume.html
@@ -23,31 +23,30 @@
     <div class="nav-item"><a href="resume.html">Resume</a></div>
     <div class="nav-item"><a href="contact.html">Contact</a></div>
   </div>
-<div id="container">
-  <div id="job">
+<div class="align-center">
+  <div class="job-container">
+      <div id="card">
+        <h1><u>Work Expierience</u></h1>
+        <h1>Sweeper</h1>
+        <p>I worked at Calvin Smith Elementary School as a sweeper. I swept the halls, cleaned bathrooms, vaccumed classrooms, washed tables chairs and desks.</p>
+
+        <h1>Code to Success Program</h1>
+        <p>I participated in the Code to Success Program</p>
+      </div>
     <div id="card">
-      <h1><u>Work Expierience</u></h1>
-      <h1>Sweeper</h1>
-      <p>I worked at Calvin Smith Elementary School as a sweeper. I swept the halls, cleaned bathrooms, vaccumed classrooms, washed tables chairs and desks.</p>
-
-      <h1>Code to Success Program</h1>
-      <p>I participated in the Code to Success Program</p>
-
-    </div>
-  </div>
-  <div id="card">
-    <div id=skill-bar>
-      <p><u><b>HTML</b></u></p>
-      <div class="container">
-        <div class="skills html">70%</div>
-      </div>
-      <p><u><b>CSS</b></u></p>
-      <div class="container">
-        <div class="skills css">60%</div>
-      </div>
-      <p><u><b>JavaScript<b></u></p>
+      <div id=skill-bar>
+        <p><u><b>HTML</b></u></p>
         <div class="container">
-          <div class="skills js">30%</div>
+          <div class="skills html">70%</div>
+        </div>
+        <p><u><b>CSS</b></u></p>
+        <div class="container">
+          <div class="skills css">60%</div>
+        </div>
+        <p><u><b>JavaScript<b></u></p>
+          <div class="container">
+            <div class="skills js">30%</div>
+          </div>
         </div>
       </div>
     </div>
