Fixed active state

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
 </head>
 <body>
   <div id="tabs">
-    <div class="nav-item"><a class="active" href="index.html">Home</a></div>
-    <div class="nav-item"><a href="about.html">About</a></div>
+    <div class="nav-item"><a href="index.html">Home</a></div>
+    <div class="nav-item"><a class="active" href="about.html">About</a></div>
     <div class="nav-item"><a href="resume.html">Resume</a></div>
     <div class="nav-item"><a href="contact.html">Contact</a></div>
   </div>
