--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="align-center">
     <div class="header">
       <h1>Brady Mills</h1>
-      <div class="under-header">
+      <div class="under-header col2">
         <a href="resume.html" class="button">Resume</a>
         <a href="contact.html" class="button">Contact</a>
         </div>
