--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   </div>
   <div class="align-center">
 
-<div>
+<div id="card">
   <img src="img.jpg" alt="">
   <h1>Brady Mills</h1>
   <p class="profile-title">Programmer</p>
@@ -37,7 +37,7 @@
   </div>
   <button>Contact</button>
 </div>
-<div id="card">
+<div id="hobbies">
   <h1><b><u>Hobbies</u></b><h1>
     <ul>
       <li>Dance</li>
