--- a/about.html
+++ b/about.html
@@ -26,26 +26,28 @@
   <div class="align-center">
 
 <div id="card">
+  <div class="about">
+
   <img src="img.jpg" alt="">
   <h1>Brady Mills</h1>
   <p class="profile-title">Programmer</p>
   <p>Taylorsville High</p>
-  <div id="icons">
+  <!--<div id="icons">
     <a href="#"><i class="fa fa-instagram"></i></a>
     <a href="#"><i class="fa fa-twitter"></i></a>
     <a href="#"><i class="fa fa-linkedin"></i></a>
   </div>
-  <button>Contact</button>
-</div>
+  <button>Contact</button>-->
+
 <div id="hobbies">
   <h1><b><u>Hobbies</u></b><h1>
     <ul>
       <li>Dance</li>
       <li>Gaming</li>
       <li>Programming</li>
-      <li></li>
     </ul>
   </div>
+</div>
 </div>
 </body>
 </html>
