--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
           <a href="#"><i class="fa fa-instagram"></i></a>
           <a href="#"><i class="fa fa-twitter"></i></a>
           <a href="#"><i class="fa fa-linkedin"></i></a>
+          <a href="#"><i class="fa fa-envelope"></i></a>
         </div>
-        <button>Contact</button>
       </div>
       <div class="under-header">
       </div>
