--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 <div id="card">
   <div class="about">
 
-  <img src="img.jpg" alt="">
+  <img src="https://liquipedia.net/commons/images/thumb/f/fd/Team_Random_logo.png/600px-Team_Random_logo.png" alt="">
   <h1>Brady Mills</h1>
   <p class="profile-title">Programmer</p>
   <p>Taylorsville High</p>
