--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,10 @@
           <p>Taylorsville High</p>
         </div>
         <div id="icons align-center">
-          <a href="#"><i class="fa fa-instagram"></i></a>
-          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="https://instagram.com/bboy_sharp"><i class="fa fa-instagram"></i></a>
+          <a href="https://twitter.com/#!/essence3383"><i class="fa fa-twitter"></i></a>
           <a href="#"><i class="fa fa-linkedin"></i></a>
-          <a href="#"><i class="fa fa-envelope"></i></a>
+          <a href="mailto:soccerfish2436@gmail.com"><i class="fa fa-envelope"></i></a>
         </div>
       </div>
       <div class="under-header">
